--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <meta property="og:description" content="&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8; - &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;, &#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA; &#x5D5;&#x5D4;&#x5EA;&#x5E0;&#x5E2;&#x5EA; &#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD;, &#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF; &#x5E4;&#x5E0;&#x5E6;&#x27;&#x5E8;&#x5D9;&#x5DD;, &#x5D7;&#x5DC;&#x5D5;&#x5E0;&#x5D5;&#x5EA; &#x5D7;&#x5E9;&#x5DE;&#x5DC;&#x5D9;&#x5D9;&#x5DD;, &#x5DE;&#x5E0;&#x5D5;&#x5E8;&#x5D5;&#x5EA; &#x5D5;&#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5DD;. &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA; &#x5E2;&#x5D3; &#x5D4;&#x5D1;&#x5D9;&#x5EA;">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="he_IL">
-<link rel="preload" href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&amp;display=swap" as="style" onload="this.onload=null;this.rel=&#x27;stylesheet&#x27;">
+<link rel="preload" href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&amp;display=swap" as="style" onload="this.onload=null;this.rel=&#x27;stylesheet&#x27;" fetchpriority="high">
 <noscript>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&amp;display=swap">
 </noscript>
-<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel=&#x27;stylesheet&#x27;">
+<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel=&#x27;stylesheet&#x27;" fetchpriority="high">
 <noscript>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </noscript>
@@ -29,11 +29,14 @@
 <link rel="stylesheet" href="css/sections.css">
 <link rel="stylesheet" href="css/gallery.css">
 <link rel="stylesheet" href="css/responsive.css">
-<link rel="icon" type="image/png" sizes="16x16" href="logo1.png">
+<link rel="stylesheet" href="css/whatsapp-widget.css">
+<link rel="stylesheet" href="css/phone-buttons.css">
+<link rel="icon" type="image/png" sizes="16x16" href="logo1.png" fetchpriority="high">
 <link rel="icon" type="image/png" sizes="32x32" href="logo1.png">
 <link rel="icon" type="image/png" sizes="48x48" href="logo1.png">
 <link rel="apple-touch-icon" sizes="180x180" href="logo1.png">
-<script type="application/ld&#x2B;json">{"@context":"https://schema.org","@type":"AutomotiveBusiness","name":"&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8; - &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;","description":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;, &#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA; &#x5D5;&#x5D4;&#x5EA;&#x5E0;&#x5E2;&#x5EA; &#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD; 24 &#x5E9;&#x5E2;&#x5D5;&#x5EA; &#x5D1;&#x5D9;&#x5DE;&#x5DE;&#x5D4; &#x5D1;&#x5D7;&#x5D9;&#x5E4;&#x5D4;, &#x5D4;&#x5E7;&#x5E8;&#x5D9;&#x5D5;&#x5EA; &#x5D5;&#x5D0;&#x5D6;&#x5D5;&#x5E8; &#x5D4;&#x5E6;&#x5E4;&#x5D5;&#x5DF;","image":"logo1.png","telephone":"&#x2B;972549094869","url":"","priceRange":"$$","openingHoursSpecification":{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],"opens":"00:00","closes":"23:59"},"areaServed":[{"@type":"City","name":"&#x5D7;&#x5D9;&#x5E4;&#x5D4;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D0;&#x5EA;&#x5D0;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D1;&#x5D9;&#x5D0;&#x5DC;&#x5D9;&#x5E7;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D9;&#x5DD;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5DE;&#x5D5;&#x5E6;&#x5E7;&#x5D9;&#x5DF;"},{"@type":"City","name":"&#x5E0;&#x5E9;&#x5E8;"},{"@type":"City","name":"&#x5D8;&#x5D9;&#x5E8;&#x5EA; &#x5DB;&#x5E8;&#x5DE;&#x5DC;"},{"@type":"City","name":"&#x5E2;&#x5DB;&#x5D5;"},{"@type":"City","name":"&#x5E2;&#x5EA;&#x5DC;&#x5D9;&#x5EA;"}],"hasOfferCatalog":{"@type":"OfferCatalog","name":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;","itemListElement":[{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5D8;&#x5E2;&#x5D9;&#x5E0;&#x5EA; &#x5D5;&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD;","description":"&#x5D8;&#x5E2;&#x5D9;&#x5E0;&#x5D4; &#x5D5;&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;, &#x5E2;&#x5DD; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D0;&#x5D9;&#x5DB;&#x5D5;&#x5EA;&#x5D9;&#x5D9;&#x5DD; &#x5D5;&#x5D7;&#x5D6;&#x5E7;&#x5D9;&#x5DD;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;","description":"&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF; &#x5E4;&#x5E0;&#x5E6;&#x27;&#x5E8;&#x5D9;&#x5DD;, &#x5D7;&#x5DC;&#x5D5;&#x5E0;&#x5D5;&#x5EA; &#x5D7;&#x5E9;&#x5DE;&#x5DC;&#x5D9;&#x5D9;&#x5DD;, &#x5DE;&#x5E0;&#x5D5;&#x5E8;&#x5D5;&#x5EA; &#x5D5;&#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; 24/7","description":"&#x5D6;&#x5DE;&#x5D9;&#x5E0;&#x5D5;&#x5EA; &#x5DE;&#x5DC;&#x5D0;&#x5D4; 24 &#x5E9;&#x5E2;&#x5D5;&#x5EA; &#x5D1;&#x5D9;&#x5DE;&#x5DE;&#x5D4;, 7 &#x5D9;&#x5DE;&#x5D9;&#x5DD; &#x5D1;&#x5E9;&#x5D1;&#x5D5;&#x5E2;"}}]}}
+<link rel="preload" as="image" href="bg.png" fetchpriority="high">
+<script type="application/ld&#x2B;json">{"@context":"https://schema.org","@type":"AutomotiveBusiness","name":"&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8; - &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;","description":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;, &#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA; &#x5D5;&#x5D4;&#x5EA;&#x5E0;&#x5E2;&#x5EA; &#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD; 24 &#x5E9;&#x5E2;&#x5D5;&#x5EA; &#x5D1;&#x5D9;&#x5DE;&#x5DE;&#x5D4; &#x5D1;&#x5D7;&#x5D9;&#x5E4;&#x5D4;, &#x5D4;&#x5E7;&#x5E8;&#x5D9;&#x5D5;&#x5EA; &#x5D5;&#x5D0;&#x5D6;&#x5D5;&#x5E8; &#x5D4;&#x5E6;&#x5E4;&#x5D5;&#x5DF;","image":"logo1.png","telephone":"&#x2B;972549094869","url":"","priceRange":"$$","openingHoursSpecification":{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],"opens":"00:00","closes":"23:59"},"areaServed":[{"@type":"City","name":"&#x5D7;&#x5D9;&#x5E4;&#x5D4;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D0;&#x5EA;&#x5D0;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D1;&#x5D9;&#x5D0;&#x5DC;&#x5D9;&#x5E7;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D9;&#x5DD;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5DE;&#x5D5;&#x5E6;&#x5E7;&#x5D9;&#x5DF;"},{"@type":"City","name":"&#x5E0;&#x5E9;&#x5E8;"},{"@type":"City","name":"&#x5D8;&#x5D9;&#x5E8;&#x5EA; &#x5DB;&#x5E8;&#x5DE;&#x5DC;"},{"@type":"City","name":"&#x5E2;&#x5DB;&#x5D5;"},{"@type":"City","name":"&#x5E2;&#x5EA;&#x5DC;&#x5D9;&#x5EA;"}],"hasOfferCatalog":{"@type":"OfferCatalog","name":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;","itemListElement":[{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5D8;&#x5E2;&#x5D9;&#x5E0;&#x5EA; &#x5D5;&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD;","description":"&#x5D8;&#x5E2;&#x5D9;&#x5E0;&#x5D4; &#x5D5;&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;, &#x5E2;&#x5DD; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D0;&#x5D9;&#x5DB;&#x5D5;&#x5EA;&#x5D9;&#x5D9;&#x5DD; &#x5D5;&#x5D7;&#x5D6;&#x5E7;&#x5D9;&#x5DD;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;","description":"&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF; &#x5E4;&#x5E0;&#x5E6;&#x27;&#x5E8;&#x5D9;&#x5DD;, &#x5D7;&#x5DC;&#x5D5;&#x5E0;&#x5D5;&#x5EA; &#x5D7;&#x5E9;&#x5DE;&#x5DC;&#x5D9;&#x5D9;&#x5DD;, &#x5DE;&#x5E0;&#x5D5;&#x5E8;&#x5D5;&#x5EA; &#x5D5;&#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; 24/7","description":"&#x5D6;&#x5DE;&#x5D9;&#x5E0;&#x5D5;&#x5EA; &#x5DE;&#x5DC;&#x5D0;&#x5D4; 24 &#x5E9;&#x5E2;&#x5D5;&#x5EA; &#x5D1;&#x5D9;&#x5DE;&#x5DE;&#x5D4;, 7 &#x5D9;&#x5DE;&#x5D9;&#x5DD; &#x5D1;&#x5E9;&#x5D1;&#x5D5;&#x5E2;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D5;&#x5E0;&#x5D9;&#x5EA;&#x5D5;&#x5E7; &#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5D5;&#x5EA;","description":"&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD; &#x5D5;&#x5E0;&#x5D9;&#x5EA;&#x5D5;&#x5E7; &#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5D5;&#x5EA; &#x5DC;&#x5DB;&#x5DC; &#x5E1;&#x5D5;&#x5D2;&#x5D9; &#x5D4;&#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5E1;&#x5E8;&#x5D9;&#x5E7;&#x5D4; &#x5D5;&#x5D0;&#x5D9;&#x5E4;&#x5D5;&#x5E1; &#x5EA;&#x5E7;&#x5DC;&#x5D5;&#x5EA;","description":"&#x5E1;&#x5E8;&#x5D9;&#x5E7;&#x5D4; &#x5D5;&#x5D0;&#x5D9;&#x5E4;&#x5D5;&#x5E1; &#x5EA;&#x5E7;&#x5DC;&#x5D5;&#x5EA; &#x5D3;&#x5E8;&#x5DA; &#x5DE;&#x5D7;&#x5E9;&#x5D1; &#x5DC;&#x5D0;&#x5D1;&#x5D7;&#x5D5;&#x5DF; &#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9; &#x5E9;&#x5DC; &#x5D4;&#x5E8;&#x5DB;&#x5D1;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5D2;&#x5DC;&#x5D2;&#x5DC;","description":"&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5D2;&#x5DC;&#x5D2;&#x5DC; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;, &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA; &#x5DE;&#x5D4;&#x5D9;&#x5E8; &#x5D5;&#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9;"}}]}}
   </script>
 
   <script>
@@ -41,7 +44,7 @@
   </script>
 
 </head>
-<body>
+<body data-whatsapp="972549094869">
 <a href="#main-content" class="skip-to-content">&#x5D3;&#x5DC;&#x5D2; &#x5DC;&#x5EA;&#x5D5;&#x5DB;&#x5DF; &#x5D4;&#x5E8;&#x5D0;&#x5E9;&#x5D9; / Skip to main content</a>
 
 <nav id="main-navigation" role="navigation" aria-label="&#x5EA;&#x5E4;&#x5E8;&#x5D9;&#x5D8; &#x5E0;&#x5D9;&#x5D5;&#x5D5;&#x5D8; &#x5E8;&#x5D0;&#x5E9;&#x5D9;" class="navbar navbar-expand-lg navbar-light modern-navbar">
@@ -92,6 +95,9 @@
 <a href="tel:&#x2B;972549094869" onclick="trackPhoneClick(&#x27;hero_phone_primary&#x27;);" class="hero-phone primary">
 <i class="fas fa-phone">
 </i> 054-9094869</a>
+<a href="tel:&#x2B;972503801128 " onclick="trackPhoneClick(&#x27;hero_phone_secondary&#x27;);" class="hero-phone secondary">
+<i class="fas fa-mobile-alt">
+</i> 050-3801128 </a>
 </div>
 
 </section>
@@ -124,6 +130,33 @@
 <div class="service-icon">&#x26A0;&#xFE0F;</div>
 <h5 class="card-title">&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA; 24/7</h5>
 <p class="card-text">&#x5D6;&#x5DE;&#x5D9;&#x5E0;&#x5D5;&#x5EA; &#x5DE;&#x5DC;&#x5D0;&#x5D4; 24 &#x5E9;&#x5E2;&#x5D5;&#x5EA; &#x5D1;&#x5D9;&#x5DE;&#x5DE;&#x5D4;, 7 &#x5D9;&#x5DE;&#x5D9;&#x5DD; &#x5D1;&#x5E9;&#x5D1;&#x5D5;&#x5E2;</p>
+</div>
+</div>
+</div>
+<div class="col-md-4 mb-4">
+<div class="service-card fade-in">
+<div class="card-body text-center">
+<div class="service-icon">&#x1F511;</div>
+<h5 class="card-title">&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D5;&#x5E0;&#x5D9;&#x5EA;&#x5D5;&#x5E7; &#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5D5;&#x5EA;</h5>
+<p class="card-text">&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD; &#x5D5;&#x5E0;&#x5D9;&#x5EA;&#x5D5;&#x5E7; &#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5D5;&#x5EA; &#x5DC;&#x5DB;&#x5DC; &#x5E1;&#x5D5;&#x5D2;&#x5D9; &#x5D4;&#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD;</p>
+</div>
+</div>
+</div>
+<div class="col-md-4 mb-4">
+<div class="service-card fade-in">
+<div class="card-body text-center">
+<div class="service-icon">&#x1F4BB;</div>
+<h5 class="card-title">&#x5E1;&#x5E8;&#x5D9;&#x5E7;&#x5D4; &#x5D5;&#x5D0;&#x5D9;&#x5E4;&#x5D5;&#x5E1; &#x5EA;&#x5E7;&#x5DC;&#x5D5;&#x5EA;</h5>
+<p class="card-text">&#x5E1;&#x5E8;&#x5D9;&#x5E7;&#x5D4; &#x5D5;&#x5D0;&#x5D9;&#x5E4;&#x5D5;&#x5E1; &#x5EA;&#x5E7;&#x5DC;&#x5D5;&#x5EA; &#x5D3;&#x5E8;&#x5DA; &#x5DE;&#x5D7;&#x5E9;&#x5D1; &#x5DC;&#x5D0;&#x5D1;&#x5D7;&#x5D5;&#x5DF; &#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9; &#x5E9;&#x5DC; &#x5D4;&#x5E8;&#x5DB;&#x5D1;</p>
+</div>
+</div>
+</div>
+<div class="col-md-4 mb-4">
+<div class="service-card fade-in">
+<div class="card-body text-center">
+<div class="service-icon">&#x1F6DE;</div>
+<h5 class="card-title">&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5D2;&#x5DC;&#x5D2;&#x5DC;</h5>
+<p class="card-text">&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5D2;&#x5DC;&#x5D2;&#x5DC; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;, &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA; &#x5DE;&#x5D4;&#x5D9;&#x5E8; &#x5D5;&#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9;</p>
 </div>
 </div>
 </div>
@@ -268,6 +301,9 @@
 
   </script>
 <script src="javascript/scroll-animations.js">
+
+  </script>
+<script src="javascript/whatsapp-widget.js">
 
   </script>
 
