--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
 <a href="tel:&#x2B;972549094869" onclick="trackPhoneClick(&#x27;cta_phone_primary&#x27;);" class="cta-phone primary">
 <i class="fas fa-phone">
 </i> 054-9094869</a>
+<a href="tel:&#x2B;972503801128 " onclick="trackPhoneClick(&#x27;cta_phone_secondary&#x27;);" class="cta-phone secondary">
+<i class="fas fa-mobile-alt">
+</i> 050-3801128 </a>
 </div>
 
 </section>
