--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div class="container">
 <div class="hero-content">
 <h1 class="hero-title">&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8;</h1>
-<p class="hero-subtitle">&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;, &#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA; &#x5D5;&#x5D4;&#x5EA;&#x5E0;&#x5E2;&#x5EA; &#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD; 24/7<br>&#x5D1;&#x5D7;&#x5D9;&#x5E4;&#x5D4;, &#x5E7;&#x5E8;&#x5D9;&#x5D5;&#x5EA;, &#x5E0;&#x5E9;&#x5E8;, &#x5D8;&#x5D9;&#x5E8;&#x5EA; &#x5DB;&#x5E8;&#x5DE;&#x5DC; &#x5D5;&#x5D0;&#x5D6;&#x5D5;&#x5E8; &#x5D4;&#x5E6;&#x5E4;&#x5D5;&#x5DF;</p>
+<p class="hero-subtitle">&#x5DE;&#x5E6;&#x5D1;&#x5E8; &#x5E2;&#x5D3; &#x5D1;&#x5D9;&#x5EA; &#x5D4;&#x5DC;&#x5E7;&#x5D5;&#x5D7; &#x5E9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D5;&#x5EA;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA; 24/7<br>&#x5D1;&#x5D7;&#x5D9;&#x5E4;&#x5D4;, &#x5E7;&#x5E8;&#x5D9;&#x5D5;&#x5EA;, &#x5E0;&#x5E9;&#x5E8;, &#x5D8;&#x5D9;&#x5E8;&#x5EA; &#x5DB;&#x5E8;&#x5DE;&#x5DC; &#x5D5;&#x5D0;&#x5D6;&#x5D5;&#x5E8; &#x5D4;&#x5E6;&#x5E4;&#x5D5;&#x5DF;</p>
 </div>
 <a href="tel:&#x2B;972549094869" onclick="trackPhoneClick(&#x27;hero_phone_primary&#x27;);" class="hero-phone primary">
 <i class="fas fa-phone">
@@ -109,8 +109,13 @@
 <div class="col-md-4 mb-4">
 <div class="service-card fade-in">
 <div class="card-body text-center">
-<div class="service-icon">&#x1F50B;</div>
-<h5 class="card-title">&#x5D8;&#x5E2;&#x5D9;&#x5E0;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD;</h5>
+<div class="service-icon">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+<!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc.-->
+<path fill="#ffa82e" d="M144 128C144 110.3 158.3 96 176 96L240 96C257.7 96 272 110.3 272 128L368 128C368 110.3 382.3 96 400 96L464 96C481.7 96 496 110.3 496 128L512 128C547.3 128 576 156.7 576 192L576 448C576 483.3 547.3 512 512 512L128 512C92.7 512 64 483.3 64 448L64 192C64 156.7 92.7 128 128 128L144 128zM456 248C456 234.7 445.3 224 432 224C418.7 224 408 234.7 408 248L408 280L376 280C362.7 280 352 290.7 352 304C352 317.3 362.7 328 376 328L408 328L408 360C408 373.3 418.7 384 432 384C445.3 384 456 373.3 456 360L456 328L488 328C501.3 328 512 317.3 512 304C512 290.7 501.3 280 488 280L456 280L456 248zM128 304C128 317.3 138.7 328 152 328L264 328C277.3 328 288 317.3 288 304C288 290.7 277.3 280 264 280L152 280C138.7 280 128 290.7 128 304z"/>
+</svg>
+</div>
+<h5 class="card-title">&#x5DE;&#x5E6;&#x5D1;&#x5E8; &#x5E2;&#x5D3; &#x5D1;&#x5D9;&#x5EA; &#x5D4;&#x5DC;&#x5E7;&#x5D5;&#x5D7;</h5>
 <p class="card-text">&#x5D8;&#x5E2;&#x5D9;&#x5E0;&#x5D4; &#x5D5;&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;, &#x5E2;&#x5DD; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D0;&#x5D9;&#x5DB;&#x5D5;&#x5EA;&#x5D9;&#x5D9;&#x5DD; &#x5D5;&#x5D7;&#x5D6;&#x5E7;&#x5D9;&#x5DD;</p>
 </div>
 </div>
@@ -118,7 +123,7 @@
 <div class="col-md-4 mb-4">
 <div class="service-card fade-in">
 <div class="card-body text-center">
-<div class="service-icon">&#x1F69A;</div>
+<div class="service-icon">🚚</div>
 <h5 class="card-title">&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;</h5>
 <p class="card-text">&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF; &#x5E4;&#x5E0;&#x5E6;&#x27;&#x5E8;&#x5D9;&#x5DD;, &#x5D7;&#x5DC;&#x5D5;&#x5E0;&#x5D5;&#x5EA; &#x5D7;&#x5E9;&#x5DE;&#x5DC;&#x5D9;&#x5D9;&#x5DD;, &#x5DE;&#x5E0;&#x5D5;&#x5E8;&#x5D5;&#x5EA; &#x5D5;&#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;</p>
 </div>
@@ -127,7 +132,7 @@
 <div class="col-md-4 mb-4">
 <div class="service-card fade-in">
 <div class="card-body text-center">
-<div class="service-icon">&#x26A0;&#xFE0F;</div>
+<div class="service-icon">⚠️</div>
 <h5 class="card-title">&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA; 24/7</h5>
 <p class="card-text">&#x5D6;&#x5DE;&#x5D9;&#x5E0;&#x5D5;&#x5EA; &#x5DE;&#x5DC;&#x5D0;&#x5D4; 24 &#x5E9;&#x5E2;&#x5D5;&#x5EA; &#x5D1;&#x5D9;&#x5DE;&#x5DE;&#x5D4;, 7 &#x5D9;&#x5DE;&#x5D9;&#x5DD; &#x5D1;&#x5E9;&#x5D1;&#x5D5;&#x5E2;</p>
 </div>
@@ -136,7 +141,7 @@
 <div class="col-md-4 mb-4">
 <div class="service-card fade-in">
 <div class="card-body text-center">
-<div class="service-icon">&#x1F511;</div>
+<div class="service-icon">🔑</div>
 <h5 class="card-title">&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D5;&#x5E0;&#x5D9;&#x5EA;&#x5D5;&#x5E7; &#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5D5;&#x5EA;</h5>
 <p class="card-text">&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD; &#x5D5;&#x5E0;&#x5D9;&#x5EA;&#x5D5;&#x5E7; &#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5D5;&#x5EA; &#x5DC;&#x5DB;&#x5DC; &#x5E1;&#x5D5;&#x5D2;&#x5D9; &#x5D4;&#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD;</p>
 </div>
@@ -145,7 +150,7 @@
 <div class="col-md-4 mb-4">
 <div class="service-card fade-in">
 <div class="card-body text-center">
-<div class="service-icon">&#x1F4BB;</div>
+<div class="service-icon">💻</div>
 <h5 class="card-title">&#x5E1;&#x5E8;&#x5D9;&#x5E7;&#x5D4; &#x5D5;&#x5D0;&#x5D9;&#x5E4;&#x5D5;&#x5E1; &#x5EA;&#x5E7;&#x5DC;&#x5D5;&#x5EA;</h5>
 <p class="card-text">&#x5E1;&#x5E8;&#x5D9;&#x5E7;&#x5D4; &#x5D5;&#x5D0;&#x5D9;&#x5E4;&#x5D5;&#x5E1; &#x5EA;&#x5E7;&#x5DC;&#x5D5;&#x5EA; &#x5D3;&#x5E8;&#x5DA; &#x5DE;&#x5D7;&#x5E9;&#x5D1; &#x5DC;&#x5D0;&#x5D1;&#x5D7;&#x5D5;&#x5DF; &#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9; &#x5E9;&#x5DC; &#x5D4;&#x5E8;&#x5DB;&#x5D1;</p>
 </div>
@@ -154,7 +159,7 @@
 <div class="col-md-4 mb-4">
 <div class="service-card fade-in">
 <div class="card-body text-center">
-<div class="service-icon">&#x1F6DE;</div>
+<div class="service-icon">🛞</div>
 <h5 class="card-title">&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5D2;&#x5DC;&#x5D2;&#x5DC;</h5>
 <p class="card-text">&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5D2;&#x5DC;&#x5D2;&#x5DC; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;, &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA; &#x5DE;&#x5D4;&#x5D9;&#x5E8; &#x5D5;&#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9;</p>
 </div>
@@ -172,7 +177,7 @@
 <div class="col-lg-5 col-md-6 mb-4">
 <div class="service-card fade-in">
 <div class="card-body text-center">
-<div class="service-icon">&#x1F3D9;&#xFE0F;</div>
+<div class="service-icon">🏙️</div>
 <h5 class="card-title">&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D1;&#x5D7;&#x5D9;&#x5E4;&#x5D4;</h5>
 <p class="card-text">&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA; &#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9;&#x5D9;&#x5DD; &#x5D1;&#x5D7;&#x5D9;&#x5E4;&#x5D4; - &#x5D4;&#x5D3;&#x5E8;, &#x5DB;&#x5E8;&#x5DE;&#x5DC;, &#x5D7;&#x5D9;&#x5E4;&#x5D4; &#x5D4;&#x5EA;&#x5D7;&#x5EA;&#x5D9;&#x5EA;, &#x5E0;&#x5D5;&#x5D5;&#x5D4; &#x5E9;&#x5D0;&#x5E0;&#x5DF;, &#x5D1;&#x5EA; &#x5D2;&#x5DC;&#x5D9;&#x5DD;</p>
 </div>
@@ -181,7 +186,7 @@
 <div class="col-lg-5 col-md-6 mb-4">
 <div class="service-card fade-in">
 <div class="card-body text-center">
-<div class="service-icon">&#x1F3D8;&#xFE0F;</div>
+<div class="service-icon">🏘️</div>
 <h5 class="card-title">&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D1;&#x5E7;&#x5E8;&#x5D9;&#x5D5;&#x5EA;</h5>
 <p class="card-text">&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA; &#x5D1;&#x5E7;&#x5E8;&#x5D9;&#x5D5;&#x5EA; - &#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D0;&#x5EA;&#x5D0;, &#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D1;&#x5D9;&#x5D0;&#x5DC;&#x5D9;&#x5E7;, &#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D9;&#x5DD;, &#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5DE;&#x5D5;&#x5E6;&#x5E7;&#x5D9;&#x5DF;</p>
 </div>
@@ -230,13 +235,16 @@
 <p class="gallery-subtitle">&#x5D0;&#x5D5;&#x5E1;&#x5E3; &#x5EA;&#x5DE;&#x5D5;&#x5E0;&#x5D5;&#x5EA; &#x5DE;&#x5E4;&#x5E2;&#x5D5;&#x5DC;&#x5D5;&#x5EA; &#x5D4;&#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D4;&#x5D3;&#x5E8;&#x5DA; &#x5E9;&#x5DC;&#x5E0;&#x5D5;</p>
 <div id="imageGallery" style="display: grid; opacity: 1; transform: translateY(0px); transition: 0.6s;" class="gallery-grid fade-in">
 <div style="animation-delay: 0s; opacity: 1; transform: translateY(0px);" class="gallery-item">
-<img src="images/WhatsApp Image 2026-01-11 at 10.29.12 (1).jpeg" alt="WhatsApp Image 2026-01-11 at 10.29.12 (1)" loading="lazy" decoding="async" onclick="openLightbox(&#x27;images/WhatsApp Image 2026-01-11 at 10.29.12 (1).jpeg&#x27;, &#x27;WhatsApp Image 2026-01-11 at 10.29.12 (1)&#x27;);" style="opacity: 1; transition: opacity 0.3s;" onload="this.style.opacity = 1;">
+<img src="images/&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA;_&#x5DE;&#x5E6;&#x5D1;&#x5E8;_&#x5E2;&#x5D3;_&#x5D4;&#x5D1;&#x5D9;&#x5EA;.webp" alt="&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8; &#x5E2;&#x5D3; &#x5D4;&#x5D1;&#x5D9;&#x5EA;" loading="lazy" decoding="async" onclick="openLightbox(&#x27;images/&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA;_&#x5DE;&#x5E6;&#x5D1;&#x5E8;_&#x5E2;&#x5D3;_&#x5D4;&#x5D1;&#x5D9;&#x5EA;.webp&#x27;, &#x27;&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8; &#x5E2;&#x5D3; &#x5D4;&#x5D1;&#x5D9;&#x5EA;&#x27;);" style="opacity: 1; transition: opacity 0.3s;" onload="this.style.opacity = 1;">
 </div>
 <div style="animation-delay: 0.05s; opacity: 1; transform: translateY(0px);" class="gallery-item">
-<img src="images/WhatsApp Image 2026-01-11 at 10.29.12 (2).jpeg" alt="WhatsApp Image 2026-01-11 at 10.29.12 (2)" loading="lazy" decoding="async" onclick="openLightbox(&#x27;images/WhatsApp Image 2026-01-11 at 10.29.12 (2).jpeg&#x27;, &#x27;WhatsApp Image 2026-01-11 at 10.29.12 (2)&#x27;);" style="opacity: 1; transition: opacity 0.3s;" onload="this.style.opacity = 1;">
+<img src="images/&#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;_&#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF;_&#x5E2;&#x5D3;_&#x5D4;&#x5D1;&#x5D9;&#x5EA;.webp" alt="&#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF; &#x5E2;&#x5D3; &#x5D4;&#x5D1;&#x5D9;&#x5EA;" loading="lazy" decoding="async" onclick="openLightbox(&#x27;images/&#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;_&#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF;_&#x5E2;&#x5D3;_&#x5D4;&#x5D1;&#x5D9;&#x5EA;.webp&#x27;, &#x27;&#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF; &#x5E2;&#x5D3; &#x5D4;&#x5D1;&#x5D9;&#x5EA;&#x27;);" style="opacity: 1; transition: opacity 0.3s;" onload="this.style.opacity = 1;">
 </div>
 <div style="animation-delay: 0.1s; opacity: 1; transform: translateY(0px);" class="gallery-item">
-<img src="images/WhatsApp Image 2026-01-11 at 10.29.12.jpeg" alt="WhatsApp Image 2026-01-11 at 10.29.12" loading="lazy" decoding="async" onclick="openLightbox(&#x27;images/WhatsApp Image 2026-01-11 at 10.29.12.jpeg&#x27;, &#x27;WhatsApp Image 2026-01-11 at 10.29.12&#x27;);" style="opacity: 1; transition: opacity 0.3s;" onload="this.style.opacity = 1;">
+<img src="images/&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8;_&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9;_&#x5D3;&#x5E8;&#x5DA;.webp" alt="&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8; &#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;" loading="lazy" decoding="async" onclick="openLightbox(&#x27;images/&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8;_&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9;_&#x5D3;&#x5E8;&#x5DA;.webp&#x27;, &#x27;&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8; &#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;&#x27;);" style="opacity: 1; transition: opacity 0.3s;" onload="this.style.opacity = 1;">
+</div>
+<div style="animation-delay: 0.15000000000000002s; opacity: 1; transform: translateY(0px);" class="gallery-item">
+<img src="images/&#x5DE;&#x5E6;&#x5D1;&#x5E8;_&#x5E2;&#x5D3;_&#x5D1;&#x5D9;&#x5EA;_&#x5D4;&#x5DC;&#x5E7;&#x5D5;&#x5D7;.webp" alt="&#x5DE;&#x5E6;&#x5D1;&#x5E8; &#x5E2;&#x5D3; &#x5D1;&#x5D9;&#x5EA; &#x5D4;&#x5DC;&#x5E7;&#x5D5;&#x5D7;" loading="lazy" decoding="async" onclick="openLightbox(&#x27;images/&#x5DE;&#x5E6;&#x5D1;&#x5E8;_&#x5E2;&#x5D3;_&#x5D1;&#x5D9;&#x5EA;_&#x5D4;&#x5DC;&#x5E7;&#x5D5;&#x5D7;.webp&#x27;, &#x27;&#x5DE;&#x5E6;&#x5D1;&#x5E8; &#x5E2;&#x5D3; &#x5D1;&#x5D9;&#x5EA; &#x5D4;&#x5DC;&#x5E7;&#x5D5;&#x5D7;&#x27;);" style="opacity: 1; transition: opacity 0.3s;" onload="this.style.opacity = 1;">
 </div>
 </div>
 </div>
