--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </noscript>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="css/colors.css">
-<link rel="stylesheet" href="css/accessibility.css">
-<link rel="stylesheet" href="css/styles.css">
-<link rel="stylesheet" href="css/navigation.css">
-<link rel="stylesheet" href="css/sections.css">
-<link rel="stylesheet" href="css/gallery.css">
-<link rel="stylesheet" href="css/responsive.css">
-<link rel="stylesheet" href="css/whatsapp-widget.css">
-<link rel="stylesheet" href="css/phone-buttons.css">
+<link rel="stylesheet" href="css/colors.css?v=1.2">
+<link rel="stylesheet" href="css/accessibility.css?v=1.2">
+<link rel="stylesheet" href="css/styles.css?v=1.2">
+<link rel="stylesheet" href="css/navigation.css?v=1.2">
+<link rel="stylesheet" href="css/sections.css?v=1.2">
+<link rel="stylesheet" href="css/gallery.css?v=1.2">
+<link rel="stylesheet" href="css/responsive.css?v=1.2">
+<link rel="stylesheet" href="css/whatsapp-widget.css?v=1.2">
+<link rel="stylesheet" href="css/phone-buttons.css?v=1.2">
 <link rel="icon" type="image/png" sizes="16x16" href="logo1.png" fetchpriority="high">
 <link rel="icon" type="image/png" sizes="32x32" href="logo1.png">
 <link rel="icon" type="image/png" sizes="48x48" href="logo1.png">
