--- a/index.html
+++ b/index.html
@@ -31,16 +31,43 @@
 <link rel="stylesheet" href="css/responsive.css?v=1.2">
 <link rel="stylesheet" href="css/whatsapp-widget.css?v=1.2">
 <link rel="stylesheet" href="css/phone-buttons.css?v=1.2">
-<link rel="icon" type="image/png" sizes="16x16" href="logo1.png" fetchpriority="high">
-<link rel="icon" type="image/png" sizes="32x32" href="logo1.png">
-<link rel="icon" type="image/png" sizes="48x48" href="logo1.png">
-<link rel="apple-touch-icon" sizes="180x180" href="logo1.png">
-<link rel="preload" as="image" href="bg.png" fetchpriority="high">
-<script type="application/ld&#x2B;json">{"@context":"https://schema.org","@type":"AutomotiveBusiness","name":"&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8; - &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;","description":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5;, &#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA; &#x5D5;&#x5D4;&#x5EA;&#x5E0;&#x5E2;&#x5EA; &#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD; 24 &#x5E9;&#x5E2;&#x5D5;&#x5EA; &#x5D1;&#x5D9;&#x5DE;&#x5DE;&#x5D4; &#x5D1;&#x5D7;&#x5D9;&#x5E4;&#x5D4;, &#x5D4;&#x5E7;&#x5E8;&#x5D9;&#x5D5;&#x5EA; &#x5D5;&#x5D0;&#x5D6;&#x5D5;&#x5E8; &#x5D4;&#x5E6;&#x5E4;&#x5D5;&#x5DF;","image":"logo1.png","telephone":"&#x2B;972549094869","url":"","priceRange":"$$","openingHoursSpecification":{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],"opens":"00:00","closes":"23:59"},"areaServed":[{"@type":"City","name":"&#x5D7;&#x5D9;&#x5E4;&#x5D4;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D0;&#x5EA;&#x5D0;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D1;&#x5D9;&#x5D0;&#x5DC;&#x5D9;&#x5E7;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5D9;&#x5DD;"},{"@type":"City","name":"&#x5E7;&#x5E8;&#x5D9;&#x5D9;&#x5EA; &#x5DE;&#x5D5;&#x5E6;&#x5E7;&#x5D9;&#x5DF;"},{"@type":"City","name":"&#x5E0;&#x5E9;&#x5E8;"},{"@type":"City","name":"&#x5D8;&#x5D9;&#x5E8;&#x5EA; &#x5DB;&#x5E8;&#x5DE;&#x5DC;"},{"@type":"City","name":"&#x5E2;&#x5DB;&#x5D5;"},{"@type":"City","name":"&#x5E2;&#x5EA;&#x5DC;&#x5D9;&#x5EA;"}],"hasOfferCatalog":{"@type":"OfferCatalog","name":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; &#x5D5;&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;","itemListElement":[{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5D8;&#x5E2;&#x5D9;&#x5E0;&#x5EA; &#x5D5;&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD;","description":"&#x5D8;&#x5E2;&#x5D9;&#x5E0;&#x5D4; &#x5D5;&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;, &#x5E2;&#x5DD; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D0;&#x5D9;&#x5DB;&#x5D5;&#x5EA;&#x5D9;&#x5D9;&#x5DD; &#x5D5;&#x5D7;&#x5D6;&#x5E7;&#x5D9;&#x5DD;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5E0;&#x5D9; &#x5D3;&#x5E8;&#x5DA;","description":"&#x5EA;&#x5D9;&#x5E7;&#x5D5;&#x5DF; &#x5E4;&#x5E0;&#x5E6;&#x27;&#x5E8;&#x5D9;&#x5DD;, &#x5D7;&#x5DC;&#x5D5;&#x5E0;&#x5D5;&#x5EA; &#x5D7;&#x5E9;&#x5DE;&#x5DC;&#x5D9;&#x5D9;&#x5DD;, &#x5DE;&#x5E0;&#x5D5;&#x5E8;&#x5D5;&#x5EA; &#x5D5;&#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA;&#x5D9; &#x5D7;&#x5D9;&#x5DC;&#x5D5;&#x5E5; 24/7","description":"&#x5D6;&#x5DE;&#x5D9;&#x5E0;&#x5D5;&#x5EA; &#x5DE;&#x5DC;&#x5D0;&#x5D4; 24 &#x5E9;&#x5E2;&#x5D5;&#x5EA; &#x5D1;&#x5D9;&#x5DE;&#x5DE;&#x5D4;, 7 &#x5D9;&#x5DE;&#x5D9;&#x5DD; &#x5D1;&#x5E9;&#x5D1;&#x5D5;&#x5E2;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D5;&#x5E0;&#x5D9;&#x5EA;&#x5D5;&#x5E7; &#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5D5;&#x5EA;","description":"&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5DE;&#x5E6;&#x5D1;&#x5E8;&#x5D9;&#x5DD; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD; &#x5D5;&#x5E0;&#x5D9;&#x5EA;&#x5D5;&#x5E7; &#x5E7;&#x5D5;&#x5D3;&#x5E0;&#x5D9;&#x5D5;&#x5EA; &#x5DC;&#x5DB;&#x5DC; &#x5E1;&#x5D5;&#x5D2;&#x5D9; &#x5D4;&#x5E8;&#x5DB;&#x5D1;&#x5D9;&#x5DD;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5E1;&#x5E8;&#x5D9;&#x5E7;&#x5D4; &#x5D5;&#x5D0;&#x5D9;&#x5E4;&#x5D5;&#x5E1; &#x5EA;&#x5E7;&#x5DC;&#x5D5;&#x5EA;","description":"&#x5E1;&#x5E8;&#x5D9;&#x5E7;&#x5D4; &#x5D5;&#x5D0;&#x5D9;&#x5E4;&#x5D5;&#x5E1; &#x5EA;&#x5E7;&#x5DC;&#x5D5;&#x5EA; &#x5D3;&#x5E8;&#x5DA; &#x5DE;&#x5D7;&#x5E9;&#x5D1; &#x5DC;&#x5D0;&#x5D1;&#x5D7;&#x5D5;&#x5DF; &#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9; &#x5E9;&#x5DC; &#x5D4;&#x5E8;&#x5DB;&#x5D1;"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5D2;&#x5DC;&#x5D2;&#x5DC;","description":"&#x5D4;&#x5D7;&#x5DC;&#x5E4;&#x5EA; &#x5D2;&#x5DC;&#x5D2;&#x5DC; &#x5D1;&#x5DE;&#x5E7;&#x5D5;&#x5DD;, &#x5E9;&#x5D9;&#x5E8;&#x5D5;&#x5EA; &#x5DE;&#x5D4;&#x5D9;&#x5E8; &#x5D5;&#x5DE;&#x5E7;&#x5E6;&#x5D5;&#x5E2;&#x5D9;"}}]}}
+<link rel="icon" type="image/png" sizes="16x16" href="logo1.webp" fetchpriority="high">
+<link rel="icon" type="image/png" sizes="32x32" href="logo1.webp">
+<link rel="icon" type="image/png" sizes="48x48" href="logo1.webp">
+<link rel="apple-touch-icon" sizes="180x180" href="logo1.webp">
+<link rel="preload" as="image" href="bg.webp" fetchpriority="high">
+<script type="application/ld&#x2B;json">{"@context":"https://schema.org","@type":"AutomotiveBusiness","name":"טייגר - שירותי חילוץ","description":"שירותי חילוץ, תיקוני דרך והתנעת רכבים 24 שעות ביממה בחיפה, הקריות ואזור הצפון","image":"logo1.webp","telephone":"+972549094869","url":"","priceRange":"$$","openingHoursSpecification":{"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],"opens":"00:00","closes":"23:59"},"areaServed":[{"@type":"City","name":"חיפה"},{"@type":"City","name":"קריית אתא"},{"@type":"City","name":"קריית ביאליק"},{"@type":"City","name":"קריית ים"},{"@type":"City","name":"קריית מוצקין"},{"@type":"City","name":"נשר"},{"@type":"City","name":"טירת כרמל"},{"@type":"City","name":"עכו"},{"@type":"City","name":"עתלית"}],"hasOfferCatalog":{"@type":"OfferCatalog","name":"שירותי חילוץ ותיקוני דרך","itemListElement":[{"@type":"Offer","itemOffered":{"@type":"Service","name":"טעינת והחלפת מצברים","description":"טעינה והחלפת מצברים במקום, עם מצברים איכותיים וחזקים"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"תיקוני דרך","description":"תיקון פנצ'רים, חלונות חשמליים, מנורות וקודנים במקום"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"שירותי חילוץ 24/7","description":"זמינות מלאה 24 שעות ביממה, 7 ימים בשבוע"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"החלפת מצברים וניתוק קודניות","description":"החלפת מצברים במקום וניתוק קודניות לכל סוגי הרכבים"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"סריקה ואיפוס תקלות","description":"סריקה ואיפוס תקלות דרך מחשב לאבחון מקצועי של הרכב"}},{"@type":"Offer","itemOffered":{"@type":"Service","name":"החלפת גלגל","description":"החלפת גלגל במקום, שירות מהיר ומקצועי"}}]}}
   </script>
 
   <script>
     window.siteAnalytics = {"enabled":true,"googleAnalyticsId":"G-PBP3G0KNMS","allowedDomains":["localhost"]};
+  </script>
+<script async="async" src="https://www.googletagmanager.com/gtag/js?id=G-PBP3G0KNMS">
+
+  </script>
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-PBP3G0KNMS');
+  </script>
+
+  <script>
+    function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
+  gtag('event', 'conversion', {
+      'send_to': 'AW-655837764/S3LOCJe-odEbEMSU3bgC',
+      'value': 1.0,
+      'currency': 'ILS',
+      'event_callback': callback
+  });
+  return false;
+}
   </script>
 
 </head>
@@ -76,14 +103,14 @@
 </li>
 </ul>
 </div>
-<img src="logo1.png" alt="&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8; &#x5DC;&#x5D5;&#x5D2;&#x5D5;" class="logo">
+<img src="logo1.webp" alt="&#x5D8;&#x5D9;&#x5D9;&#x5D2;&#x5E8; &#x5DC;&#x5D5;&#x5D2;&#x5D5;" class="logo">
 </div>
 
 </nav>
 <main id="main-content" role="main" aria-label="&#x5EA;&#x5D5;&#x5DB;&#x5DF; &#x5E8;&#x5D0;&#x5E9;&#x5D9;">
 
-<section id="home" style="background-image: url(&#x27;bg.png&#x27;); background-size: cover; background-position: center; background-repeat: no-repeat;" class="hero-section">
-<div style="background-image: url(&#x27;bg.png&#x27;); background-size: cover; background-position: center; background-repeat: no-repeat; display: none;" class="mobile-bg">
+<section id="home" style="background-image: url(&#x27;bg.webp&#x27;); background-size: cover; background-position: center; background-repeat: no-repeat;" class="hero-section">
+<div style="background-image: url(&#x27;bg.webp&#x27;); background-size: cover; background-position: center; background-repeat: no-repeat; display: none;" class="mobile-bg">
 </div>
 <div class="hero-overlay">
 </div>
